Initial GPU vector rendering as a sample (#524)